@@ -4,6 +4,8 @@ amaroK ChangeLog
 
 
 VERSION 1.2-beta2:
+  ADD: Show songs you once played, but didn't play for the longest
+       time on ContextBrowser's Home-page. (least played) (BR 89479)
   FIX: Don't crash on song switch, when there's only one visible
        playlist item and repeat-list is activated. (BR 94030)
   CHG: Add and queue tracks after the current track. (BR 94121)
